--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
     <title>Psychologist Website</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
@@ -30,8 +31,13 @@
 </header>
 
 
+
 <!-- MOBILE MENU -->
 <div class="mobile-nav" id="mobileNav">
+
+    <!-- CLOSE ICON -->
+    <div class="close-btn" id="closeBtn">✖</div>
+
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
@@ -75,63 +81,64 @@
 
         <div class="lux-grid" role="list" aria-label="Services list">
 
-          <article class="lux-card" role="listitem" tabindex="0">
-            <div class="lux-ico">🧠</div>
-            <div class="lux-title">Anxiety Therapy</div>
-            <p class="lux-desc">Helping you manage overwhelming thoughts and regain calm using CBT & mindfulness tools.</p>
-            <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
-          </article>
+  <article class="lux-card" role="listitem" tabindex="0">
+    <div class="lux-ico"><i class="fa-solid fa-brain"></i></div>
+    <div class="lux-title">Anxiety Therapy</div>
+    <p class="lux-desc">Helping you manage overwhelming thoughts and regain calm using CBT & mindfulness tools.</p>
+    <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
+  </article>
 
-          <article class="lux-card" role="listitem" tabindex="0">
-            <div class="lux-ico">💛</div>
-            <div class="lux-title">Depression Treatment</div>
-            <p class="lux-desc">Guiding you toward clarity, hope, and emotional healing with personalized therapy plans.</p>
-            <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
-          </article>
+  <article class="lux-card" role="listitem" tabindex="0">
+    <div class="lux-ico"><i class="fa-solid fa-heart-circle-plus"></i></div>
+    <div class="lux-title">Depression Treatment</div>
+    <p class="lux-desc">Guiding you toward clarity, hope, and emotional healing with personalized therapy plans.</p>
+    <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
+  </article>
 
-          <article class="lux-card" role="listitem" tabindex="0">
-            <div class="lux-ico">⚖️</div>
-            <div class="lux-title">Stress Management</div>
-            <p class="lux-desc">Practical techniques to reduce stress, build resilience and restore balance in daily life.</p>
-            <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
-          </article>
+  <article class="lux-card" role="listitem" tabindex="0">
+    <div class="lux-ico"><i class="fa-solid fa-scale-balanced"></i></div>
+    <div class="lux-title">Stress Management</div>
+    <p class="lux-desc">Practical techniques to reduce stress, build resilience and restore balance in daily life.</p>
+    <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
+  </article>
 
-          <article class="lux-card" role="listitem" tabindex="0">
-            <div class="lux-ico">👧</div>
-            <div class="lux-title">Child & Teen Counseling</div>
-            <p class="lux-desc">Developmentally appropriate interventions for children and adolescents, with parent coaching.</p>
-            <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
-          </article>
+  <article class="lux-card" role="listitem" tabindex="0">
+    <div class="lux-ico"><i class="fa-solid fa-child-reaching"></i></div>
+    <div class="lux-title">Child & Teen Counseling</div>
+    <p class="lux-desc">Developmentally appropriate interventions for children and adolescents, with parent coaching.</p>
+    <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
+  </article>
 
-          <article class="lux-card" role="listitem" tabindex="0">
-            <div class="lux-ico">💞</div>
-            <div class="lux-title">Couple & Family Therapy</div>
-            <p class="lux-desc">Therapies to rebuild communication, trust and connection in relationships and families.</p>
-            <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
-          </article>
+  <article class="lux-card" role="listitem" tabindex="0">
+    <div class="lux-ico"><i class="fa-solid fa-people-arrows"></i></div>
+    <div class="lux-title">Couple & Family Therapy</div>
+    <p class="lux-desc">Therapies to rebuild communication, trust and connection in relationships and families.</p>
+    <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
+  </article>
 
-          <article class="lux-card" role="listitem" tabindex="0">
-            <div class="lux-ico">🛡️</div>
-            <div class="lux-title">Trauma & PTSD Recovery</div>
-            <p class="lux-desc">Safe, paced approaches to process trauma and restore a sense of safety and agency.</p>
-            <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
-          </article>
+  <article class="lux-card" role="listitem" tabindex="0">
+    <div class="lux-ico"><i class="fa-solid fa-shield-heart"></i></div>
+    <div class="lux-title">Trauma & PTSD Recovery</div>
+    <p class="lux-desc">Safe, paced approaches to process trauma and restore a sense of safety and agency.</p>
+    <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
+  </article>
 
-          <article class="lux-card" role="listitem" tabindex="0">
-            <div class="lux-ico">🔥</div>
-            <div class="lux-title">Anger Management</div>
-            <p class="lux-desc">Understand triggers, learn regulation tools and replace reactive patterns with calm responses.</p>
-            <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
-          </article>
+  <article class="lux-card" role="listitem" tabindex="0">
+    <div class="lux-ico"><i class="fa-solid fa-fire-flame-curved"></i></div>
+    <div class="lux-title">Anger Management</div>
+    <p class="lux-desc">Understand triggers, learn regulation tools and replace reactive patterns with calm responses.</p>
+    <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
+  </article>
 
-          <article class="lux-card" role="listitem" tabindex="0">
-            <div class="lux-ico">🌱</div>
-            <div class="lux-title">Self-Esteem & Confidence</div>
-            <p class="lux-desc">Empowering work to rebuild self-worth, assertiveness and positive identity.</p>
-            <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
-          </article>
+  <article class="lux-card" role="listitem" tabindex="0">
+    <div class="lux-ico"><i class="fa-solid fa-seedling"></i></div>
+    <div class="lux-title">Self-Esteem & Confidence</div>
+    <p class="lux-desc">Empowering work to rebuild self-worth, assertiveness and positive identity.</p>
+    <div class="lux-footer"><div></div><a class="lux-link" href="booking.html">Book</a></div>
+  </article>
 
-        </div>
+</div>
+
       </div>
     </div>
   </section>
@@ -171,11 +178,41 @@
       <p style="text-align:center;color:var(--muted);max-width:860px;margin:0 auto 20px">Professional, confidential and culturally-sensitive care with measurable outcomes.</p>
 
       <div class="why-grid">
-        <div class="why-item"><div style="font-size:28px">💜</div><h4>Empathetic & Safe Space</h4><p style="color:var(--muted)">Non-judgmental care focused on your needs.</p></div>
-        <div class="why-item"><div style="font-size:28px">🧠</div><h4>Evidence-Based Techniques</h4><p style="color:var(--muted)">CBT, Mindfulness, EFT and trauma-informed approaches.</p></div>
-        <div class="why-item"><div style="font-size:28px">🎓</div><h4>Qualified & Experienced</h4><p style="color:var(--muted)">Years of clinical practice and ongoing training.</p></div>
-        <div class="why-item"><div style="font-size:28px">🔒</div><h4>Fully Confidential</h4><p style="color:var(--muted)">Your privacy is respected at every step.</p></div>
-      </div>
+
+  <div class="why-item">
+    <div class="why-icon">
+      <i class="fa-solid fa-heart"></i>
+    </div>
+    <h4>Empathetic & Safe Space</h4>
+    <p style="color:var(--muted)">Non-judgmental care focused on your needs.</p>
+  </div>
+
+  <div class="why-item">
+    <div class="why-icon">
+      <i class="fa-solid fa-brain"></i>
+    </div>
+    <h4>Evidence-Based Techniques</h4>
+    <p style="color:var(--muted)">CBT, Mindfulness, EFT and trauma-informed approaches.</p>
+  </div>
+
+  <div class="why-item">
+    <div class="why-icon">
+      <i class="fa-solid fa-user-graduate"></i>
+    </div>
+    <h4>Qualified & Experienced</h4>
+    <p style="color:var(--muted)">Years of clinical practice and ongoing training.</p>
+  </div>
+
+  <div class="why-item">
+    <div class="why-icon">
+      <i class="fa-solid fa-lock"></i>
+    </div>
+    <h4>Fully Confidential</h4>
+    <p style="color:var(--muted)">Your privacy is respected at every step.</p>
+  </div>
+
+</div>
+
     </div>
   </section>
 
@@ -232,17 +269,27 @@
     </div>
 
     <div class="footer-section contact">
-        <h3>Contact</h3>
-        <p>📍 Faisalabad, Pakistan</p>
-        <p>📞 +923464867673</p>
-        <p>📧 support@example.com</p>
-        
-        <div class="footer-social">
-            <a href="#">🌐</a>
-            <a href="#">📘</a>
-            <a href="#">📸</a>
-            <a href="#">▶️</a>
-        </div>
+    <h3>Contact</h3>
+
+    <p><i class="fa-solid fa-location-dot"></i> Faisalabad, Pakistan</p>
+    <p><i class="fa-solid fa-phone"></i> +92 346 4867673</p>
+    <p><i class="fa-solid fa-envelope"></i> support@example.com</p>
+    
+    <div class="footer-social">
+        <a href="https://www.facebook.com/muhammad.nadeem.405722?mibextid=ZbWKwL" target="_blank">
+            <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="#" aria-label="Twitter / X">
+            <i class="fa-brands fa-x-twitter"></i>
+        </a>
+        <a href="#" aria-label="Instagram">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" aria-label="YouTube">
+            <i class="fa-brands fa-youtube"></i>
+        </a>
+    </div>
+</div>
     </div>
 
 </footer>
@@ -264,6 +311,18 @@
   document.querySelectorAll('.lux-card').forEach(card=>{
     card.addEventListener('click', ()=> location.href = card.querySelector('.lux-link').getAttribute('href'));
     card.addEventListener('keyup', (e)=> { if(e.key==='Enter') card.click(); });
+  });
+
+    // Close menu by cross
+  closeBtn.addEventListener("click", () => {
+    mobileNav.classList.remove("open");
+  });
+
+  // Close menu when clicking any link
+  document.querySelectorAll(".mobile-nav a").forEach(link => {
+    link.addEventListener("click", () => {
+      mobileNav.classList.remove("open");
+    });
   });
 </script>
 
