Updated CSS and Resources.html

--- a/Resources.html
+++ b/Resources.html
@@ -52,11 +52,12 @@
   <div class="container res-hero-inner">
 
     <!-- LEFT TEXT -->
-    <div class="hero-text fadeIn">
-      <h1>Your Mental Health Resource Hub</h1>
-      <p>Simple, calming and evidence-based guides to support your emotional well-being.</p>
-      <a href="Resources.html" class="btn-primary">Explore Resources</a>
-    </div>
+    <div class="hero-text">
+  <h1>Your Well-Being, Simplified</h1>
+  <p>Discover practical, calming, and evidence-based guides to nurture your mental and emotional health every day.</p>
+  <a href="Resources.html" class="btn-primary">Start Exploring</a>
+</div>
+
 
     <!-- RIGHT IMAGE -->
     <div class="hero-img float">
