Redesign hero sections and update branding site-wide
Replaced text-based logo with an image logo in headers across all pages and updated page titles to 'Dr. Muhammad Nadeem'. Redesigned hero sections for index, about, services, and resources pages with new layouts, images, and call-to-action buttons. Updated contact email to 'psychologist@example.com' and added developer credit in the footer. Added and refined CSS for new hero layouts and responsive design in style.css, style2.css, style3.css, and style4.css. Added new logo image to the img directory.

--- a/Resources.html
+++ b/Resources.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psychologist Website</title>
+    <title>Dr. Muhammad Nadeem</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style4.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -13,7 +13,7 @@
 <!-- ===== PREMIUM HEADER ===== -->
 <header class="premium-header">
     <div class="header-left">
-        <div class="logo">Dr. Muhammad Nadeem</div>
+        <img src="img/Psychologist_Logo-removebg-preview.png" alt="Logo"></a>
     </div>
 
     <nav class="premium-nav">
@@ -48,26 +48,40 @@
 
 
 <!-- ========== RESOURCES HERO ========== -->
-<section class="res-hero">
-  <div class="container res-hero-inner">
+<section class="page-hero">
+  <div class="page-hero-inner">
 
-    <!-- LEFT TEXT -->
-    <div class="hero-text">
-  <h1>Your Well-Being, Simplified</h1>
-  <p>Discover practical, calming, and evidence-based guides to nurture your mental and emotional health every day.</p>
-  <a href="Resources.html" class="btn-primary">Start Exploring</a>
-</div>
+    <div class="page-hero-text">
+      <h1>Your Mental Health Resource Hub</h1>
+<p>Simple, calming, and evidence-based guides to support your well-being.</p>
 
 
-    <!-- RIGHT IMAGE -->
-    <div class="hero-img float">
-      <div class="img-glass">
-        <img src="img/558757825_24575672028754556_7996170943640070215_n.jpg" alt="">
+      <div class="hero-actions">
+        <a href="book.html" class="btn-primary">Book Session</a>
+        <a href="services.html" class="btn-secondary">Explore More</a>
       </div>
+
+      
+    </div>
+
+    <div class="page-hero-image animate-float">
+      <img src="img/471229556_8788646207883725_3460199636607251840_n.jpg" alt="Hero Image">
     </div>
 
   </div>
+  <div class="hero-meta">
+        <span>Online & In-Clinic</span>
+
+        <div>
+          <strong>10+ Years Experience</strong>
+          <small>Culturally sensitive & trauma-informed care</small>
+        </div>
+      </div>
+
+    </div>
 </section>
+
+
 
 
 
@@ -238,7 +252,7 @@
 
     <p><i class="fa-solid fa-location-dot"></i> Faisalabad, Pakistan</p>
     <p><i class="fa-solid fa-phone"></i> +92 346 4867673</p>
-    <p><i class="fa-solid fa-envelope"></i> support@example.com</p>
+    <p><i class="fa-solid fa-envelope"></i> psychologist@example.com</p>
     
     <div class="footer-social">
         <a href="https://www.facebook.com/muhammad.nadeem.405722?mibextid=ZbWKwL" target="_blank">
@@ -260,8 +274,10 @@
 </footer>
 
 <div class="footer-bottom">
-    © 2025 Psychologist Clinic — All Rights Reserved
+  © 2025 Psychologist Clinic — All Rights Reserved | Made by <strong>Noshahi Developers Inc.</strong>
 </div>
+
+
 
 
 <script>
