--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psychologist Website</title>
+    <title>Dr. Muhammad Nadeem</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -13,7 +13,7 @@
 <!-- ===== PREMIUM HEADER ===== -->
 <header class="premium-header">
     <div class="header-left">
-        <div class="logo">Dr. Muhammad Nadeem</div>
+        <img src="img/Psychologist_Logo-removebg-preview.png" alt="Logo"></a>
     </div>
 
     <nav class="premium-nav">
@@ -49,41 +49,40 @@
 
 <section class="about-page">
 
-  <!-- SECTION 1: HERO -->
-  <section class="about-hero">
-    <div class="hero-inner container fade-up">
-      <div>
-        <h1 class="hero-title">About Dr. Muhammad Nadeem</h1>
-        <p class="hero-sub">Clinical Psychologist — Helping You Heal with Empathy &amp; Evidence-Based Care</p>
 
-        <div class="hero-actions">
-          <a class="btn-primary" href="booking.html">Book Appointment</a>
-          <a class="btn-ghost" href="services.html">View Services</a>
-        </div>
 
-        <div style="margin-top:18px; display:flex; gap:12px; align-items:center;">
-          <div style="background:#fff;padding:8px 12px;border-radius:12px;box-shadow:0 10px 30px rgba(80,70,150,0.06);">
-            <strong style="font-size:16px;color:#112a40">10+ Years</strong>
-            <div style="font-size:12px;color:var(--muted)">Clinical Experience</div>
-          </div>
+    <!-- RIGHT IMAGE -->
+    <section class="page-hero">
+  <div class="page-hero-inner">
 
-          <div style="margin-left:auto; color:var(--muted); font-size:13px">Online &amp; In-Clinic Sessions</div>
+    <div class="page-hero-text">
+      <h1>Compassionate Care, Professional Support</h1>
+<p>Learn more about my journey, experience, and approach to mental well-being.</p>
+
+
+      <div class="hero-actions">
+        <a href="book.html" class="btn-primary">Book Session</a>
+        <a href="services.html" class="btn-secondary">Explore More</a>
+      </div>
+
+<div class="hero-meta">
+        <span>Online & In-Clinic</span>
+
+        <div>
+          <strong>10+ Years Experience</strong>
+          <small>Culturally sensitive & trauma-informed care</small>
         </div>
       </div>
 
-      <aside class="hero-profile">
-        <div class="hero-photo">
-          <!-- replace with your photo -->
-          <img src="img/471165678_8788646941216985_4168084255169365107_n.jpg" alt="Dr. Muhammad Nadeem">
-        </div>
-
-        <div class="hero-card">
-          <div class="name">Dr. Muhammad Nadeem</div>
-          <div class="role">MSc Clinical Psychology • Registered Psychologist</div>
-        </div>
-      </aside>
     </div>
-  </section>
+
+    <div class="page-hero-image animate-float">
+      <img src="img/558757825_24575672028754556_7996170943640070215_n.jpg" alt="Hero Image">
+    </div>
+
+  </div>
+</section>
+
 
   <!-- SECTION 2: PROFESSIONAL BIO -->
   <section class="bio-section">
@@ -216,7 +215,7 @@
 
     <p><i class="fa-solid fa-location-dot"></i> Faisalabad, Pakistan</p>
     <p><i class="fa-solid fa-phone"></i> +92 346 4867673</p>
-    <p><i class="fa-solid fa-envelope"></i> support@example.com</p>
+    <p><i class="fa-solid fa-envelope"></i> psychologist@example.com</p>
     
     <div class="footer-social">
         <a href="https://www.facebook.com/muhammad.nadeem.405722?mibextid=ZbWKwL" target="_blank">
@@ -238,8 +237,10 @@
 </footer>
 
 <div class="footer-bottom">
-    © 2025 Psychologist Clinic — All Rights Reserved
+  © 2025 Psychologist Clinic — All Rights Reserved | Made by <strong>Noshahi Developers Inc.</strong>
 </div>
+
+
 
 
 <script>
