--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psychologist Website</title>
+    <title>Dr. Muhammad Nadeem</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -14,8 +14,9 @@
 <!-- ===== PREMIUM HEADER ===== -->
 <header class="premium-header">
     <div class="header-left">
-        <div class="logo">Dr. Muhammad Nadeem</div>
+        <img src="img/Psychologist_Logo-removebg-preview.png" alt="Logo"></a>
     </div>
+
 
     <nav class="premium-nav">
         <ul>
@@ -49,72 +50,54 @@
 </div>
 
 
-<section class="max-w-7xl mx-auto px-5 sm:px-6 py-16 lg:py-20 
-flex flex-col lg:flex-row items-center gap-12 lg:gap-16">
+<section class="hero">
+  <div class="hero-container">
 
-  <!-- LEFT CONTENT -->
-  <div class="flex-1 space-y-6 text-center lg:text-left animate-fadeIn">
+    <!-- LEFT CONTENT -->
+    <div class="hero-text">
+      <h1>
+        You’re not alone —
+        <br>
+        support is here when you're ready.
+      </h1>
 
-    <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold leading-tight text-[#5e0259]">
-      You’re not alone —<br class="hidden sm:block">
-      support is here when you're ready.
-    </h1>
+      <p>
+        Compassionate, confidential and evidence-based therapy for
+        individuals, couples and children.
+      </p>
 
-    <p class="text-base sm:text-lg text-gray-600 max-w-lg mx-auto lg:mx-0">
-      Compassionate, confidential and evidence-based therapy for individuals, couples and children.
-    </p>
-
-    <!-- BUTTONS -->
-    <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
-      <a href="booking.html"
-        class="px-6 py-3 bg-primary text-white rounded-xl shadow-md hover:bg-primaryDark transition text-center">
-        Book Appointment
-      </a>
-
-      <a href="services.html"
-        class="px-6 py-3 bg-white border border-gray-200 shadow-sm rounded-xl hover:bg-gray-50 transition text-center">
-        Explore Services
-      </a>
-    </div>
-
-    <!-- BADGES -->
-    <div class="flex flex-col sm:flex-row items-center gap-4 mt-6 justify-center lg:justify-start">
-
-      <span class="px-4 py-1 bg-gray-100 rounded-full text-sm whitespace-nowrap">
-        Online & In-Clinic
-      </span>
-
-      <div class="text-center sm:text-left">
-        <p class="font-bold text-gray-800 text-sm sm:text-base">
-          10+ Years Experience
-        </p>
-        <p class="text-xs text-gray-500">
-          Culturally sensitive & trauma-informed care
-        </p>
+      <div class="hero-buttons">
+        <a href="booking.html" class="btn-primary">Book Appointment</a>
+        <a href="services.html" class="btn-secondary">Explore Services</a>
       </div>
 
+      <div class="hero-meta">
+        <span>Online & In-Clinic</span>
+
+        <div>
+          <strong>10+ Years Experience</strong>
+          <small>Culturally sensitive & trauma-informed care</small>
+        </div>
+      </div>
     </div>
+
+    <!-- RIGHT IMAGE -->
+    <div class="hero-image">
+      <div class="hero-image animate-float">
+
+      <img src="img/WhatsApp Image 2025-12-04 at 22.19.38_1e424c97.jpg" alt="Dr. Muhammad Nadeem">
+      <div class="hero-card">
+        <br>
+
+        <strong>Dr. Muhammad Nadeem</strong>
+        <p>MSc Clinical Psychology & Motivational Speaker</p>
+      </div>
+    </div>
+
   </div>
-
-  <!-- RIGHT SIDE DOCTOR CARD -->
-  <aside class="flex flex-col items-center">
-
-    <div class="w-56 h-64 sm:w-64 sm:h-72 rounded-2xl overflow-hidden shadow-lux animate-float">
-      <img src="img/WhatsApp Image 2025-12-04 at 22.19.38_1e424c97.jpg"
-        class="w-full h-full object-cover" alt="Dr Muhammad Nadeem">
-    </div>
-
-    <div class="mt-4 p-4 sm:p-5 bg-white/60 backdrop-blur-md shadow-lux2 
-    rounded-xl text-center max-w-xs">
-      <h3 class="font-bold text-gray-800">Dr. Muhammad Nadeem</h3>
-      <p class="text-sm text-gray-500">
-        MSc Clinical Psychology & Motivational Speaker
-      </p>
-    </div>
-
-  </aside>
-
 </section>
+
+
 
 
 
@@ -348,7 +331,7 @@ flex flex-col lg:flex-row items-center gap-12 lg:gap-16">
 
     <p><i class="fa-solid fa-location-dot"></i> Faisalabad, Pakistan</p>
     <p><i class="fa-solid fa-phone"></i> +92 346 4867673</p>
-    <p><i class="fa-solid fa-envelope"></i> support@example.com</p>
+    <p><i class="fa-solid fa-envelope"></i> psychologist@example.com</p>
     
     <div class="footer-social">
         <a href="https://www.facebook.com/muhammad.nadeem.405722?mibextid=ZbWKwL" target="_blank">
@@ -371,8 +354,10 @@ flex flex-col lg:flex-row items-center gap-12 lg:gap-16">
 </footer>
 
 <div class="footer-bottom">
-    © 2025 Psychologist Clinic — All Rights Reserved
+  © 2025 Psychologist Clinic — All Rights Reserved | Made by <strong>Noshahi Developers Inc.</strong>
 </div>
+
+
 
 
 <script>
