--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psychologist Website</title>
+    <title>Dr. Muhammad Nadeem</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -13,7 +13,7 @@
 <!-- ===== PREMIUM HEADER ===== -->
 <header class="premium-header">
     <div class="header-left">
-        <div class="logo">Dr. Muhammad Nadeem</div>
+        <img src="img/Psychologist_Logo-removebg-preview.png" alt="Logo"></a>
     </div>
 
     <nav class="premium-nav">
@@ -49,24 +49,38 @@
 
 
 
-<!-- HERO -->
-  <header class="hero-ux">
-    <div class="wrap container">
-      <div class="hero-left">
-        <div class="hero-eyebrow">Our Expertise</div>
-        <h1 class="hero-title">Our Professional Therapy Services</h1>
-        <p class="hero-sub">Supporting your emotional well-being with evidence-based psychological care — compassionate, confidential and client-centered.</p>
+<section class="page-hero">
+  <div class="page-hero-inner">
 
-        <div class="hero-cta">
-          <a href="booking.html" class="btn-primary">Book Appointment</a>
+    <div class="page-hero-text">
+      <h1>Therapy Tailored to Your Needs</h1>
+<p>Personalized sessions designed to support your emotional and mental health.</p>
+
+
+      <div class="hero-actions">
+        <a href="book.html" class="btn-primary">Book Session</a>
+        <a href="services.html" class="btn-secondary">Explore More</a>
+      </div>
+    </div>
+
+    <div class="page-hero-image animate-float">
+      <img src="img/471165678_8788646941216985_4168084255169365107_n.jpg" alt="Hero Image">
+    </div>
+
+  </div>
+  <div class="hero-meta">
+        <span>Online & In-Clinic</span>
+
+        <div>
+          <strong>10+ Years Experience</strong>
+          <small>Culturally sensitive & trauma-informed care</small>
         </div>
       </div>
 
-      <div class="hero-card" aria-hidden="false">
-        <img src="img/471229556_8788646207883725_3460199636607251840_n.jpg" alt="Healing session">
-      </div>
     </div>
-  </header>
+</section>
+
+
 
   <!-- SERVICES GRID -->
   <section class="section container">
@@ -273,7 +287,7 @@
 
     <p><i class="fa-solid fa-location-dot"></i> Faisalabad, Pakistan</p>
     <p><i class="fa-solid fa-phone"></i> +92 346 4867673</p>
-    <p><i class="fa-solid fa-envelope"></i> support@example.com</p>
+    <p><i class="fa-solid fa-envelope"></i> psychologist@example.com</p>
     
     <div class="footer-social">
         <a href="https://www.facebook.com/muhammad.nadeem.405722?mibextid=ZbWKwL" target="_blank">
@@ -295,8 +309,10 @@
 </footer>
 
 <div class="footer-bottom">
-    © 2025 Psychologist Clinic — All Rights Reserved
+  © 2025 Psychologist Clinic — All Rights Reserved | Made by <strong>Noshahi Developers Inc.</strong>
 </div>
+
+
 
 
 <script>
